[gd_scene load_steps=25 format=3 uid="uid://c7fouswjqgykh"]

[ext_resource type="Script" path="res://Battle/UI/PlayerUI_Battle.gd" id="1_qvh2h"]
[ext_resource type="Script" path="res://Battle/UI/Menus/SelectionMenu.gd" id="2_h70pe"]
[ext_resource type="Texture2D" uid="uid://b5q065gxp68yq" path="res://Art/monochrome-transparent.png" id="3_rgjmw"]
[ext_resource type="Script" path="res://Battle/UI/Menus/PlayerPointer.gd" id="4_tfohc"]
[ext_resource type="PackedScene" uid="uid://xy1fadjc5rwx" path="res://UI/PlayerPanel.tscn" id="5_3bnqo"]
[ext_resource type="Script" path="res://Battle/UI/Menus/BA_PlayerPanel.gd" id="6_44y4s"]
[ext_resource type="Script" path="res://Battle/UI/Stats.gd" id="9_cyk76"]
[ext_resource type="PackedScene" uid="uid://yie3dymrkfv5" path="res://Menus/ManualMenu_LabelList.tscn" id="10_14tsx"]
[ext_resource type="Script" path="res://Battle/UI/Menus/PlayerMenu.gd" id="10_yjjpt"]
[ext_resource type="Script" path="res://Battle/UI/Menus/AttackMenu.gd" id="11_jwv4u"]
[ext_resource type="Script" path="res://Battle/UI/Menus/Battle_ItemMenu.gd" id="11_sc0v8"]
[ext_resource type="Script" path="res://Battle/UI/Menus/MiscMenu.gd" id="13_clnyn"]
[ext_resource type="Script" path="res://Battle/UI/WaitingMenu.gd" id="13_hqadu"]
[ext_resource type="PackedScene" uid="uid://djbkplk44r1sh" path="res://Battle/UI/Menus/action_menu.tscn" id="14_1tgmc"]
[ext_resource type="AudioStream" uid="uid://jgaoftqqr65a" path="res://Battle/Audio/Death.wav" id="15_6ia78"]
[ext_resource type="AudioStream" uid="uid://dbuwdfor0rk4n" path="res://Battle/Audio/Hurt_1.wav" id="16_oov3g"]
[ext_resource type="AudioStream" uid="uid://qv8vhmyeuf2x" path="res://Battle/Audio/Heal_1.wav" id="17_3yjq7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pbj4b"]
atlas = ExtResource("3_rgjmw")
region = Rect2(595, 170, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yen6o"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_vndq1"]
resource_name = "Death"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerPanel/Panel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.06, 0.06, 0.06, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerPanel/Panel/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("15_6ia78")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_gqoo2"]
resource_name = "Player_Damaged"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerPanel/Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 10), Vector2(-8, -8), Vector2(6, 6), Vector2(-4, -4), Vector2(2, 2), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlayerPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 10), Vector2(-8, -8), Vector2(6, 6), Vector2(-4, -4), Vector2(2, 2), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerPanel/Panel/AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("16_oov3g")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_io652"]
resource_name = "Player_Healed"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerPanel/Panel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerPanel/Panel/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("17_3yjq7")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_sving"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerPanel/Panel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerPanel/Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kukrl"]
_data = {
"Death": SubResource("Animation_vndq1"),
"Player_Damaged": SubResource("Animation_gqoo2"),
"Player_Healed": SubResource("Animation_io652"),
"RESET": SubResource("Animation_sving")
}

[node name="PlayerUI_Battle" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qvh2h")

[node name="SelectionMenu" type="Control" parent="." node_paths=PackedStringArray("initialTimer", "echoTimer")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_mode = 2
script = ExtResource("2_h70pe")
initialTimer = NodePath("initialTimer")
echoTimer = NodePath("echoTimer")

[node name="PlayerPointer" type="TextureRect" parent="SelectionMenu"]
self_modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_pbj4b")
script = ExtResource("4_tfohc")

[node name="initialTimer" type="Timer" parent="SelectionMenu"]
wait_time = 0.3

[node name="echoTimer" type="Timer" parent="SelectionMenu"]
wait_time = 0.1

[node name="PlayerPanel" parent="." instance=ExtResource("5_3bnqo")]
layout_mode = 0
offset_right = 288.0
offset_bottom = 136.0
script = ExtResource("6_44y4s")
healthbarFlipped = false
actionButtonsFlipped = false
mandatory = true

[node name="Panel" parent="PlayerPanel" index="0"]
offset_right = 216.0
offset_bottom = 107.457

[node name="AudioStreamPlayer" parent="PlayerPanel/Panel" index="2"]
volume_db = 10.0

[node name="Stats" type="PanelContainer" parent="PlayerPanel/Panel" index="3"]
layout_mode = 1
offset_right = 16.0
offset_bottom = 136.0
script = ExtResource("9_cyk76")

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/Panel/Stats"]
self_modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(16, 112)
layout_mode = 2
max_value = 10.0
value = 10.0
fill_mode = 3
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerPanel/Panel/Stats"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/normal_font_size = 10
text = "10/10"
scroll_active = false

[node name="PlayerMenu" type="Control" parent="PlayerPanel/Panel" index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_yjjpt")

[node name="MarginContainer" type="MarginContainer" parent="PlayerPanel/Panel/PlayerMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MinigameView" type="SubViewportContainer" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer/MinigameView"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(272, 120)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer/MinigameView/SubViewport"]
anchor_mode = 0

[node name="ColorRect" type="ColorRect" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer/MinigameView/SubViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0, 0.701961, 1)

[node name="MinigameZone" type="Node2D" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer/MinigameView/SubViewport"]

[node name="AttackMenu" type="PanelContainer" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
script = ExtResource("11_jwv4u")
metadata/_edit_group_ = true

[node name="ManualMenu" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer/AttackMenu" instance=ExtResource("10_14tsx")]
layout_mode = 2

[node name="ItemMenu" type="PanelContainer" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
script = ExtResource("11_sc0v8")
metadata/_edit_group_ = true

[node name="ManualMenu" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer/ItemMenu" instance=ExtResource("10_14tsx")]
layout_mode = 2

[node name="MiscMenu" type="PanelContainer" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
script = ExtResource("13_clnyn")

[node name="ManualMenu" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer/MiscMenu" instance=ExtResource("10_14tsx")]
layout_mode = 2

[node name="WaitingMenu" type="Panel" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yen6o")
script = ExtResource("13_hqadu")

[node name="CenterContainer" type="CenterContainer" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer/WaitingMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ready" type="Label" parent="PlayerPanel/Panel/PlayerMenu/MarginContainer/WaitingMenu/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "READY!"
horizontal_alignment = 1

[node name="ActionMenu" parent="PlayerPanel/Panel/PlayerMenu" instance=ExtResource("14_1tgmc")]
layout_mode = 1
offset_right = 128.0

[node name="UpArrow" parent="PlayerPanel/Panel/PlayerMenu/ActionMenu" index="0"]
visible = false

[node name="DownArrow" parent="PlayerPanel/Panel/PlayerMenu/ActionMenu" index="2"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kukrl")
}

[connection signal="gui_input" from="SelectionMenu" to="SelectionMenu" method="_on_gui_input"]
[connection signal="timeout" from="SelectionMenu/initialTimer" to="SelectionMenu" method="_on_initial_timer_timeout"]
[connection signal="timeout" from="SelectionMenu/echoTimer" to="SelectionMenu" method="_on_echo_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="PlayerPanel"]
[editable path="PlayerPanel/Panel/PlayerMenu/ActionMenu"]
